feat(content README.md): 补充了署名相关的信息
- `README.md` `content/index.md`: 增加的署名方式的说明
- `content`: 所有文件都补上了署名信息

--- a/content/淬火笔记/阿鬼prime/游戏提灯-000.md
+++ b/content/淬火笔记/阿鬼prime/游戏提灯-000.md
@@ -1,6 +1,8 @@
 ---
 title: 游戏提灯#0
 author: Brait
+tags: 
+  - "u/Brait"
 ---
 
 ## 前言
@@ -23,7 +25,7 @@ author: Brait
 - **抽象定义：** 以娱乐为目的的虚拟情境中，使特定支配者，能够通过与游戏世界的交互，来达成引人入胜体验的游戏设计特性的总括（过于晦涩）。
 - **上田文人（《旺达与巨像》制作人）定义：** “引导玩家心情舒畅的游戏结构。”
 
-> [!IMPORTANT]
+> [!IMPORTANT] 核心总结
 > 作者提出：**游戏性 = 有效设计的总和**
 
 #### 判断“有效设计”的两个标准
@@ -92,7 +94,7 @@ author: Brait
 我们经常听到这样的讨论：“这款游戏的游戏性很高”、“那个设计增强了游戏性”。  
 《游戏提灯#0》试图给“游戏性”下了一个精确的定义。阿鬼prime给出了这样一个公式：
 
-> [!TIP]
+> [!TIP] 定义
 > **游戏性 = 有效设计的总和；有效设计 = 独立乐趣 + 系统增强**
 
 毫无疑问这是个可解释性很强的定义，听起来逻辑自洽，甚至充满了工程美感。  
