feat(content): `淬火笔记/阿鬼prime/游戏提灯-000.md`微调措辞

--- a/content/淬火笔记/阿鬼prime/游戏提灯-000.md
+++ b/content/淬火笔记/阿鬼prime/游戏提灯-000.md
@@ -26,7 +26,7 @@ tags:
 - **上田文人（《旺达与巨像》制作人）定义：** “引导玩家心情舒畅的游戏结构。”
 
 > [!IMPORTANT] 核心总结
-> 作者提出：**游戏性 = 有效设计的总和**
+> 阿鬼prime提出：**游戏性 = 有效设计的总和**
 
 #### 判断“有效设计”的两个标准
 
@@ -332,7 +332,7 @@ tags:
 - **放松与治愈**
 - ...
 
-例如一款恐怖游戏，我们可以考察其有没有成功创造“恐怖感”，这可能可以是
+例如一款恐怖游戏，我们可以考察其有没有成功创造“**恐怖感**”，这可能可以是
 
 - 怪物的美术是否瘆人有压迫感
 - 追逐战的音效是否传递了紧张的情绪
@@ -382,4 +382,4 @@ tags:
 
 你可以看到，在本篇笔记中，“游戏性”至少出现了4种**不同的解释**，每个解释背后又有**不同的模糊含义**。  
 当进行日常沟通时，有时候这是一种**便捷的交流利器**，但是有时也会**引入歧义**（所谓的交流颗粒度）。  
-笔者提醒：沟通时“**对齐颗粒度**”非常关键，尤其是“游戏性”这类的词汇。
+笔者提醒：在使用“游戏性”这个词时，务必**明确语境**，以免引发不必要的误会。
